cluster/k8s/sdr/ultrafeeder-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ultrafeeder
  namespace: sdr
spec:
  selector:
    app.kubernetes.io/name: ultrafeeder
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
