cluster/k8s/sdr/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openwebrx-ingress
  namespace: sdr
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: openwebrx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: authentik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: authentik
              app.kubernetes.io/component: server
      ports:
        - port: 8073
          protocol: TCP
